<resources>
    <string name="app_name">GuessNumber</string>
    <string name="action_newGame">New Game</string>
    <string name="action_rule">Rule</string>
    <string name="action_settings">Settings</string>
    <string name="action_showAnswer">Show Answer</string>
    <string name="action_quit">Quit</string>
    <string name="Inpute_hint">Input four different digits.</string>
    <string name="Inpute_hint_input">Input</string>
    <string name="Inpute_hint_different">different digits.</string>
    <string name="Inpute_hint_digits">digits.</string>
    <string name="sure">OK.</string>
    <string name="quit">Quit</string>
<!--in Rule-->
    <string name="gameRule">Rule of the Game.</string>
    <string name="gameRuleDetal">Input four different digits.\n
        If the matching digits are in theirs right position,\n
        they are "A",\n
        if in different position ,they are "B". </string>
    <string name="gameExample">Example.</string>
    <string name="gameExampleDetal">Assume answer is 1 2 3 4\n
        Input : 7 6 5 4 ,then you have 1 A 0 B\n
        Input : 4 5 6 7 ,then you have 0 A 1 B\n
        Input : 1 4 6 7 ,then you have 1 A 1 B</string>
<!--in Setting-->
    <string name="modes">Modes</string>
    <string name="modes_inputsize">Input size</string>
    <string name="modes_inputsize_summary">Default four.</string>
    <string name="modes_different">Digits may same.</string>
    <string name="modes_different_on">On</string>
    <string name="modes_different_off">Off</string>
    <string-array name="modes_inputsize_array">
        <item>Normal(4)</item>
        <item>Hard(5)</item>
        <item>Expert(6)</item>
    </string-array>
    <string-array name="modes_inputsize_array_value">
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="answer">Answer</string>
    <string name="answer_set">Set answer</string>
    <string name="answer_show">Show answer</string>
    <string name="go_palying">Go playing.</string>
    <!--  Dialog-->
    <string name="Dialog_makeSense">check to make sense</string>
    <string name="Dialog_changed">The answer has change.</string>
    <string name="Dialog_Congratulation">Congratulation !</string>
    <string name="Dialog_guessed">You have guessed the number.</string>


</resources>
