<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/modes">
        <ListPreference
            android:dialogTitle="@string/modes_inputsize"
            android:entries="@array/modes_inputsize_array"
            android:entryValues="@array/modes_inputsize_array_value"
            android:key="modes_inputsize"
            android:title="@string/modes_inputsize"
            android:summary="@string/modes_inputsize_summary"/>
        <SwitchPreference
            android:title="@string/modes_different"
            android:key="modes_different"
            android:defaultValue="false"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/answer">
        <EditTextPreference
            android:dialogTitle="@string/answer_set"
            android:inputType="number"
            android:key="setAnswer"
            android:title="@string/answer_set"/>
        <Preference
            android:key="showAnswer"
            android:title="@string/answer_show"/>
    </PreferenceCategory>
    <Preference
        android:key="goplaying"
        android:title="@string/go_palying"/>
</PreferenceScreen>
