<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_newGame" android:title="@string/action_newGame"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_rule" android:title="@string/action_rule"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_showAnswer" android:title="@string/action_showAnswer"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
