<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.user.guessnumber.RuleFragment"
    android:background="#7f00a2e8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gameRule"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"/>


        <View android:layout_width="316dp"
            android:layout_height="2dp"
            android:background="#000000"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameRuleDetal"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gameExample"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"/>

        <View android:layout_width="316dp"
            android:layout_height="2dp"
            android:background="#000000"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameExampleDetal"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Back"-->
            <!--android:id="@+id/buttonBack"-->
            <!--android:layout_gravity="center_horizontal" />-->


    </LinearLayout>

</FrameLayout>
